# simple-template-quaternion

./: CMakeLists.txt  Quaternion.h  README.md  example.cpp  test.cpp
.github/workflows/: c-cpp.yml
